flex-gw/flex-gw-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flex-gw-ingress
  namespace: flex-gw
spec:
  ingressClassName: ingress-http.flex-gw
  rules:
  - http:
      paths:
      - path: /api(/payments.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: flex-gateway-payments-service
            port:
              number: 8081
      - path: /ms2(/payments.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: flex-gateway-ms2-service
            port:
              number: 8082
